--- a/prototype/css/mybag.css
+++ b/prototype/css/mybag.css
@@ -1,15 +1,15 @@
 .container{
-	text-align: center;
+	/*text-align: center;*/
 	padding-top: 4%;
 	padding-left: 8%;
 	position: absolute;
 }
 
-.left {
+/*.left {
 	align: left;
-}
+}*/
 
-#clothe {
+.row img {
 	width: 120px;
 	height: 120px;
 }
@@ -22,32 +22,35 @@
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-#table{
+/*#table{
 	display: inline;
-}
+}*/
 
-#profile-picture {
+.border img {
 	width: 150px;
 	height: auto;
 	padding-bottom: 20px;
 	padding-left: -10px;
 	padding-right: -10px;
+	margin: 0 auto;
+	display: block;
 }
 
-.profile {
+/*.profile {
 	float: left;
 }
 
 .infor {
 	float: right;
 }
-
+*/
 .border {
 	background-color: rgba(192,192,192,0.3);
 	width: 200px;
 }
 
-#username {
+.border p {
+	text-align: center;
 	color: purple;
 }
 
@@ -58,14 +61,17 @@
 	background-color: rgba(192,192,192,0.3);
 }
 
-.link {
+/*.link {
 	width: 200px;
 }
-
-#link {
+*/
+.link a {
+	display: block;
+	text-align: center;
 	width: 200px;
 	height: 25px;
 }
+
 
 #name {
 	font-style: arial;
