--- a/prototype/css/personal.css
+++ b/prototype/css/personal.css
@@ -1,12 +1,7 @@
 .container{
-	text-align: left;
 	padding-top: 10%;
 	padding-left: 8%;
 	position: absolute;
-}
-
-.left {
-	align: left;
 }
 
 #name #email #phone #adress{
@@ -16,7 +11,6 @@
 	font-size: 120%;
 }
 
-
 .btn {
 	color: #FFFFFF;
 	background-color: rgb(0, 68, 121);
@@ -25,47 +19,28 @@
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-#table{
-	display: inline;
-}
-
-#profile-picture {
+.border img {
 	width: 150px;
 	height: auto;
 	padding-bottom: 20px;
 	padding-left: -10px;
 	padding-right: -10px;
-}
-
-.profile {
-	float: left;
-}
-
-.infor {
-	float: right;
+	margin: 0 auto;
+	display: block;
 }
 
 .border {
 	background-color: rgba(192,192,192,0.3);
-	width: 200px;
 }
 
-#username {
+.border p {
+	text-align: center;
 	color: purple;
 }
 
-#link:hover {
-	background-color: rgba(192,192,192,0.3);
-}
-#link:active {
-	background-color: rgba(192,192,192,0.3);
-}
-
-.link {
-	width: 200px;
-}
-
-#link {
+.link a {
+	display: block;
+	text-align: center;
 	width: 200px;
 	height: 25px;
 }
