--- a/prototype/css/mybag.css
+++ b/prototype/css/mybag.css
@@ -1,19 +1,15 @@
-.container{
-	/*text-align: center;*/
-	padding-top: 4%;
-	padding-left: 8%;
-	position: absolute;
-}
 
-/*.left {
-	align: left;
-}*/
+.content {
+	padding-left: 8%;
+	padding-right: 8%;
+	padding-top: 30px;
+}
 
 .row img {
 	width: 120px;
 	height: 120px;
 }
-
+ 
 .btn {
 	color: #FFFFFF;
 	background-color: rgb(0, 68, 121);
@@ -22,9 +18,7 @@
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-/*#table{
-	display: inline;
-}*/
+
 
 .border img {
 	width: 150px;
@@ -36,44 +30,62 @@
 	display: block;
 }
 
-/*.profile {
-	float: left;
-}
 
-.infor {
-	float: right;
-}
-*/
 .border {
-	background-color: rgba(192,192,192,0.3);
-	width: 200px;
+	background-color: #EEF6F8;
+	padding: 10px;
+}
+.profile {
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 .border p {
 	text-align: center;
 	color: purple;
 }
-
-#link:hover {
+.link{
+	background-color: #fafafa;
+}
+.link a:hover, .link a:active, .link a:focus, #linkactive{
 	background-color: rgba(192,192,192,0.3);
 }
-#link:active {
-	background-color: rgba(192,192,192,0.3);
+#linkactive {
+	text-decoration: underline;
 }
 
-/*.link {
-	width: 200px;
-}
-*/
-.link a {
+.link > a {
 	display: block;
 	text-align: center;
-	width: 200px;
-	height: 25px;
+	padding: 7px;
+}
+.icon {
+	text-align: center;
+}
+.fa-trash-o {
+	font-size: 20px;
+	color: #23527c;
+
 }
 
-
-#name {
-	font-style: arial;
-	font-size: 120%;
+p.price, p.state {
+	margin: 0;
 }
+
+.list-item {
+	padding-bottom: 20px;
+	padding-top: 20px;
+	border-bottom: 1px solid #ccc;
+}
+
+.list-item:hover{
+	background-color: #F5F7F7;
+}
+
+.countItems {
+	text-align: right;
+	padding-right: 30px;
+	color: #23527c;
+	font-weight: bold;
+}
+
