--- a/prototype/css/mybag.css
+++ b/prototype/css/mybag.css
@@ -18,7 +18,9 @@
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
-
+.btn:hover {
+	color: white;
+}
 
 .border img {
 	width: 150px;
@@ -89,3 +91,6 @@ p.price, p.state {
 	font-weight: bold;
 }
 
+.icon .hvr-icon-bounce:before {
+  content: "\f014" !important;
+}
