--- a/prototype/css/personal.css
+++ b/prototype/css/personal.css
@@ -1,8 +1,3 @@
-.container{
-	padding-top: 10%;
-	padding-left: 8%;
-	position: absolute;
-}
 
 #name #email #phone #adress{
 	width: 120px;
@@ -29,18 +24,21 @@
 	display: block;
 }
 
-.border {
-	background-color: rgba(192,192,192,0.3);
-}
-
 .border p {
 	text-align: center;
 	color: purple;
 }
 
-.link a {
-	display: block;
-	text-align: center;
-	width: 200px;
-	height: 25px;
+.infor {
+	background-color: #fafafa;
+	padding: 30px;
+}	
+
+.infor .row {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.editButton {
+	float: right;
 }
