--- a/prototype/css/stylelogin.css
+++ b/prototype/css/stylelogin.css
@@ -8,7 +8,7 @@
   padding: 0;
   font-family: Sans-serif;
   background: #2c3e50;
-}*/
+}
 
 #wrap {
   margin: 0 auto 30px;
@@ -17,10 +17,10 @@
 /*#regbar {
   height: 67px;
   background: #34495e;
-*/
+
 #navthing {
   margin-left: 1100px;
-}
+}*/
 
 h2 {
   padding: 20px;
@@ -32,9 +32,13 @@ fieldset {
 }
 
 .login {
-  position: relative;
-  width: 350px;
-  display: none;
+      position: absolute;
+    width: 350px;
+    display: none;
+    z-index: 999;
+    right: 0;
+    top: 45px;
+
 }
 
 .arrow-up1 {
@@ -87,9 +91,12 @@ fieldset {
 
 
 .register {
-  position: relative;
-  width: 350px;
+      position: absolute;
+    width: 350px;
+    z-index: 999;
   display: none;
+  left: -8%;
+    top: 45px;
 }
 
 .arrow-up2 {
@@ -152,9 +159,18 @@ fieldset {
 }
 
 a {
-  color: #ecf0f1;
+  color: #0664C2;
   text-decoration: none;
 }
 a:hover {
   color: #1abc9c;
+}
+
+label {
+    color: #686868;
+    font-weight: normal;
+}
+
+input {
+  color: black;
 }
