--- a/prototype/css/header.css
+++ b/prototype/css/header.css
@@ -34,9 +34,12 @@ a:focus {
 	color: #0664C2;
 }
 .nav > li a:hover, .nav > li a:active,.nav > li a:focus{
-  text-decoration: underline !important;
+  text-decoration: none;
 }
 
+li a:active, li a:focus {
+    color: #00cc99 !important;
+}
 
 .nav > li  {
 	padding-right: 30px;
@@ -107,4 +110,39 @@ a:focus {
 a.hvr-icon-bounce.glyphicon.glyphicon-shopping-cart {
     font-size: 30px;
     margin-top: -30px;
+}
+
+
+/* Underline From Center */
+.hvr-underline-from-center {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -moz-osx-font-smoothing: grayscale;
+  position: relative;
+  overflow: hidden;
+}
+.hvr-underline-from-center:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 50%;
+  right: 50%;
+  bottom: 0;
+  background: #2098d1;
+  height: 4px;
+  -webkit-transition-property: left, right;
+  transition-property: left, right;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-underline-from-center:hover:before, .hvr-underline-from-center:focus:before, .hvr-underline-from-center:active:before {
+  left: 0;
+  right: 0;
 }
