--- a/prototype/css/header.css
+++ b/prototype/css/header.css
@@ -62,6 +62,10 @@ li a:active, li a:focus {
 	color: black;
 }
 
+.has-feedback .form-control {
+    padding-right: 100px;
+}
+
 .navbar {
 	font-size: 18px;
 }
