--- a/prototype/css/mybag.css
+++ b/prototype/css/mybag.css
@@ -16,6 +16,7 @@
 	width: 100px;
 	height: 30px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+	margin: 0 auto;
 }
 
 .btn:hover {
@@ -93,4 +94,8 @@ p.price, p.state {
 
 .icon .hvr-icon-bounce:before {
   content: "\f014" !important;
+}
+
+.sale {
+	font-size: 16px;	color: #FF0000
 }
