--- a/SourceCode/DaughtersOfStorm/WebContent/css/details.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/details.css
@@ -12,8 +12,6 @@ b.bar {
 img.photodetails{
 	padding-top:50px;
 	margin-left:200px;
-	width: 450px;
-	height: auto;
 }
 
 p.money {
@@ -105,54 +103,14 @@ p.vote{
 #slideshow IMG.last-active {
     z-index:9;
 }
-#wrap{
-   border: 1px solid #f3f3ed; 
-   width:600px;
-   height:200px;
-  margin-left:150px;
-}
-#wrap1{
-   
-   width:400px;
-   height:150px;
-  
-}
-
-#left{
-   width:200px;
-   float:left;
-	text-align:center;
-}
-#left1{
-   width:100px;
-   float:left;
-    padding-top:5px;
-
-}
-#cen{
-  width:20px;
-  float:left;
-  padding-top:5px;
-}
-#right{
-  width:350px;
-  float:right;
-}
-#right1{
-  width:200px;
-  float:right;
-  margin-right: 35px;
-  padding-top:5px;
-}
-
 
 #wrapbutton {
-	border: 1px solid #f3f3ed; 
    width:200px;
    height:50px;
-   background:#f2f2f2;
+   background:#ffffff;
    text-align:center;
    font-size:30px;
+   
 }
 table.fontsize{
 	 border=1;
@@ -161,12 +119,7 @@ table.fontsize{
 	 align=left ;
 	 width="400px"
 }
-#wrap2{
-   
-   width:300px;
-   height:400px;
-  
-}
+
 p.name {
 	padding-top:10px;
 	
@@ -388,8 +341,40 @@ img.photoslide {
 	margin-top: -15px;
 	margin-left: 30px;
 }
+.starRating:not(old){
+  display        : inline-block;
+  width          : 12.5em;
+  height         : 2.5em;
+  overflow       : hidden;
+  vertical-align : bottom;
+}
 
-#item {
-	width: 450px;
-	height: 550px;
+.starRating:not(old) > input{
+  margin-right : -100%;
+  opacity      : 0;
+}
+
+.starRating:not(old) > label{
+  display         : block;
+  float           : right;
+  position        : relative;
+  background      : url('sao2.png');
+  background-size : contain;
+}
+
+.starRating:not(old) > label:before{
+  content         : '';
+  display         : block;
+  width           : 2.5em;
+  height          : 2.5em;
+  background      : url('sao1.png');
+  background-size : contain;
+  opacity         : 0;
+  transition      : opacity 0.2s linear;
+}
+
+.starRating:not(old) > label:hover:before,
+.starRating:not(old) > label:hover ~ label:before,
+.starRating:not(:hover) > :checked ~ label:before{
+  opacity : 1;
 }
