--- a/SourceCode/DaughtersOfStorm/WebContent/css/details.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/details.css
@@ -1,3 +1,6 @@
+.row {
+	margin: 0 !important;
+}
 a.highlight:hover {
 	color: red;
 	
@@ -9,9 +12,10 @@ b.bar {
 #main{
 	font-family:Roman;
 }
+
 img.photodetails{
 	padding-top:50px;
-	margin-left:200px;
+	margin-left:150px;
 }
 
 p.money {
@@ -29,8 +33,7 @@ p.fontwordfirst {
 	
 }
 p.fontword {
-	
-	font-size:30px;
+	font-size:20px;
 	padding-left:20px;
 	
 }
@@ -161,10 +164,9 @@ input.Order {
 #wraporder{
 	border: 1px solid #f3f3ed; 
    width:150px;
-   height:50px;
    background:#ffa31a;
    text-align:center;
-   font-size:30px;
+   font-size:25px;
    color:#ffffff;
 }
 ul.word{
@@ -185,162 +187,26 @@ img.photoslide {
 	padding-left:20px;
 }
 
-/* Icon Wobble Vertical */
-@-webkit-keyframes hvr-icon-wobble-vertical {
-  16.65% {
-    -webkit-transform: translateY(6px);
-    transform: translateY(6px);
-  }
-
-  33.3% {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-5px);
-  }
-
-  49.95% {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-
-  66.6% {
-    -webkit-transform: translateY(-2px);
-    transform: translateY(-2px);
-  }
-
-  83.25% {
-    -webkit-transform: translateY(1px);
-    transform: translateY(1px);
-  }
-
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-
-@keyframes hvr-icon-wobble-vertical {
-  16.65% {
-    -webkit-transform: translateY(6px);
-    transform: translateY(6px);
-  }
-
-  33.3% {
-    -webkit-transform: translateY(-5px);
-    transform: translateY(-5px);
-  }
-
-  49.95% {
-    -webkit-transform: translateY(4px);
-    transform: translateY(4px);
-  }
-
-  66.6% {
-    -webkit-transform: translateY(-2px);
-    transform: translateY(-2px);
-  }
-
-  83.25% {
-    -webkit-transform: translateY(1px);
-    transform: translateY(1px);
-  }
-
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-  }
-}
-
-.hvr-icon-wobble-vertical {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  position: relative;
-  padding-right: 2.2em;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-}
-.hvr-icon-wobble-vertical:before {
-  content: "\f08a";
-  position: absolute;
-  right: 1em;
-  padding: 0 1px;
-  color: red;
-  font-family: FontAwesome;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-}
-.hvr-icon-wobble-vertical:hover:before, .hvr-icon-wobble-vertical:focus:before, .hvr-icon-wobble-vertical:active:before {
-  -webkit-animation-name: hvr-icon-wobble-vertical;
-  animation-name: hvr-icon-wobble-vertical;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: ease-in-out;
-  animation-timing-function: ease-in-out;
-  -webkit-animation-iteration-count: 1;
-  animation-iteration-count: 1;
-}
-
-/* Icon Pulse Grow */
-@-webkit-keyframes hvr-icon-pulse-grow {
-  to {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
-  }
-}
-
-@keyframes hvr-icon-pulse-grow {
-  to {
-    -webkit-transform: scale(1.3);
-    transform: scale(1.3);
-  }
-}
-
-.hvr-icon-pulse-grow {
-  display: inline-block;
-  vertical-align: middle;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -moz-osx-font-smoothing: grayscale;
-  position: relative;
-  padding-right: 2.2em;
-}
-.hvr-icon-pulse-grow:before {
-  content: "\f217";
-  position: absolute;
-  right: 1em;
-  padding: 0 1px;
-  font-family: FontAwesome;
-  -webkit-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
-}
-.hvr-icon-pulse-grow:hover:before, .hvr-icon-pulse-grow:focus:before, .hvr-icon-pulse-grow:active:before {
-  -webkit-animation-name: hvr-icon-pulse-grow;
-  animation-name: hvr-icon-pulse-grow;
-  -webkit-animation-duration: 0.3s;
-  animation-duration: 0.3s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-direction: alternate;
-  animation-direction: alternate;
-}
 
 .icon-add {
-	font-size: 20px;
-	margin-top: -15px;
-	margin-left: 30px;
+	margin-top: 20px;
+    margin-left: 30px
 }
+
+.icon-add i{
+    color: #B8B8B8;
+    font-size: 25px;
+    padding-right: 20px;
+}
+
+.icon-add i.fa-cart-plus:hover {
+	color: #66ccff;
+}
+
+.icon-add i.fa-bookmark:hover {
+	color: #ff5050;
+}
+
 .starRating:not(old){
   display        : inline-block;
   width          : 12.5em;
@@ -358,7 +224,7 @@ img.photoslide {
   display         : block;
   float           : right;
   position        : relative;
-  background      : url('sao2.png');
+  background      : url('../img/Details/sao2.png');
   background-size : contain;
 }
 
@@ -367,7 +233,7 @@ img.photoslide {
   display         : block;
   width           : 2.5em;
   height          : 2.5em;
-  background      : url('sao1.png');
+  background      : url('../img/Details/sao1.png');
   background-size : contain;
   opacity         : 0;
   transition      : opacity 0.2s linear;
@@ -378,3 +244,4 @@ img.photoslide {
 .starRating:not(:hover) > :checked ~ label:before{
   opacity : 1;
 }
+
