--- a/SourceCode/DaughtersOfStorm/WebContent/css/listProducts.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/listProducts.css
@@ -81,3 +81,17 @@ img{
 	padding-left: 20px;
 	padding-right: 20px;
 }
+
+.listPro {
+	padding-left: 8%;
+	padding-right: 8%;
+}
+.itemProduct {
+	padding-left: 20px;
+	padding-right: 20px;
+	max-width: 500px;
+}
+p.price {
+    text-align: right;
+    padding-right: 20px;
+}
