--- a/prototype/css/order.css
+++ b/prototype/css/order.css
@@ -18,7 +18,7 @@
 	font-size: 16px;	font-weight: normal;
 }
 .cus-Info{
-	font-style: italic;	font-size: 16px;	color: #ff33cc
+	font-style: italic;	font-size: 16px;	color:#0071e6
 }
 .posOfDiv{
 	margin-left: -135px; Width: 150px;
