--- a/SourceCode/DaughtersOfStorm/WebContent/css/personal.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/personal.css
@@ -51,3 +51,14 @@
 	background-color:#1f1f7a;
 	float:right;
 }
+input.ed {
+	padding-bottom:5px;
+	padding-top:5px;
+	padding-left: 15px;
+	padding-right: 15px;
+	text-align: middle;
+	color: white;
+	background-color:#1f1f7a;
+	float:right;
+}
+
