--- a/prototype/css/details.css
+++ b/prototype/css/details.css
@@ -4,7 +4,8 @@
 }
 b.bar {
 	font-size:20px;
-	color:blue;
+	color:black;
+	margin-left:8px;
 }
 #main{
 	font-family:Roman;
@@ -25,19 +26,19 @@ margin-left:100px;
 p.fontwordfirst {
 	padding-top:120px;
 	font-size:30px;
-	padding-left:20px;
+	padding-left:10px;
 	
 }
 p.fontword {
-	
-	font-size:30px;
-	padding-left:20px;
+	color:black;
+	font-size:25px;
+	padding-left:10px;
 	
 }
 input.order {
 	font-size:20px;
 	color:white;
-	background-color:black
+	background-color:black;
 }
 p.pad{
 	padding-top:20px;
@@ -162,7 +163,7 @@ input.Order {
 	border: 1px solid #f3f3ed; 
    width:150px;
    height:50px;
-   background:#ffa31a;
+   background:#1f1f7a;
    text-align:center;
    font-size:30px;
    color:#ffffff;
