add new layout for list

--- a/SourceCode/DaughtersOfStorm/WebContent/css/listProducts.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/listProducts.css
@@ -14,8 +14,14 @@
 .list{
 	padding-right: 7%;
 }
+
+#images{
+	width: 100%;
+	height: 500px;
+}
 img{
 	width: 100%;
+	height: 500px;
 	padding-bottom: 5%;
 }
 .row{
