--- a/SourceCode/DaughtersOfStorm/WebContent/css/index.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/index.css
@@ -96,7 +96,7 @@ footer a:hover {
 }
 
 footer .shipping span, .service span{
-	color: #888888;
+	color: #0664C2;
 	text-align: left;
 	font-size: 12px;
 } 
