--- a/SourceCode/DaughtersOfStorm/WebContent/css/styleContact.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/styleContact.css
@@ -39,17 +39,17 @@ p.contact { font-size: 24px; margin-bottom: 15px; line-height: 36px; font-family
 #contact { margin-bottom: 0px; }
 input[type="text"] { width: 400px; }
 textarea { width: 500px; height: 200px; }
-label { color: #ff5400; }
+label { color: black; }
 input, textarea { background-color: rgba(255, 255, 255, 0.4); border: 5px solid rgba(122, 192, 0, 0.15); padding: 10px; font-family: Keffeesatz, Arial; color: #4b4b4b; font-size: 24px; -webkit-border-radius: 5px; margin-bottom: 15px; margin-top: -10px; }
 input:focus, textarea:focus { border: 5px solid #ff5400; background-color: rgba(255, 255, 255, 1); }
 
-input[type="submit"] { border: none; cursor: pointer; color: #fff; font-size: 24px; background-color: #7ac000; padding: 5px 36px 8px 36px; -webkit-border-radius: 10px; -moz-border-radius: 10px; -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4); -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6); border-bottom: 1px solid rgba(0, 0, 0, 0.4); border-top: 1px solid rgba(255, 255, 255, 0.6);
+input[type="submit"] { border: none; cursor: pointer; color: blanchedalmond; font-size: 24px; background-color: #7ac000; padding: 5px 36px 8px 36px; -webkit-border-radius: 10px; -moz-border-radius: 10px; -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4); -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6); border-bottom: 1px solid rgba(0, 0, 0, 0.4); border-top: 1px solid rgba(255, 255, 255, 0.6);
 	background: -webkit-gradient(
 	    linear,
 	    left bottom,
 	    left top,
-	    color-stop(0.23, #619702),
-	    color-stop(0.62, #7ac000)
+	    color-stop(0.23, #0664C2),
+	    color-stop(0.62, #0664C2)
 	);
 	background: -moz-linear-gradient(
 	    center bottom,
@@ -58,18 +58,6 @@ input[type="submit"] { border: none; cursor: pointer; color: #fff; font-size: 24
 	);
 }
 
-input[type="submit"]:hover { color: #fff; border-bottom: 1px solid rgba(0, 0, 0, 0.4); background-color: #ff5400;
-	background: -webkit-gradient(
-	    linear,
-	    left bottom,
-	    left top,
-	    color-stop(0.23, #c34000),
-	    color-stop(0.62, #ff5400)
-	);
-	background: -moz-linear-gradient(
-	    center bottom,
-	    #c34000 23%,
-	    #ff5400 62%
-	);
+
 }
 input[type="submit"]:active { top: 1px; }
