--- a/SourceCode/DaughtersOfStorm/WebContent/css/header.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/header.css
@@ -34,7 +34,7 @@ a:focus {
 	outline: none;
 }
 
-.nav > li > a, a {
+.nav > li > a {
 	color: #0664C2;
 }
 .nav > li a:hover, .nav > li a:active,.nav > li a:focus{
@@ -42,7 +42,7 @@ a:focus {
 }
 
 li a:active, li a:focus {
-    color: #00cc99 !important;
+    color: #85c2bc !important;
 }
 
 .nav > li  {
@@ -67,7 +67,7 @@ li a:active, li a:focus {
 }
 
 .has-feedback .form-control {
-    padding-right: 100px;
+    padding-right: 50px;
 }
 
 .navbar {
@@ -75,7 +75,8 @@ li a:active, li a:focus {
 }
 
 .navbar-nav>li>a {
-	font-size: 25px;
+	font-size: 20px;
+	text-transform: uppercase;
 }
 
 /* Icon Bounce */
