--- a/SourceCode/DaughtersOfStorm/WebContent/css/index.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/index.css
@@ -1,9 +1,5 @@
-.content {
-    padding-bottom: 100px;
-}
-
-header li.active a {
-    color: #00cc99;
+header li a:active {
+    color: #85c2bc;
 }
 /*
 * Content
@@ -29,13 +25,14 @@ img {
 /*
 * Title: Do you like?
 */
-.title {
-	color: #DE831B;
-	font-size: 40px;
-	padding: 10px;
-	margin-top: 80px;
-	border-top: dashed 1px #ccc;
-	border-bottom: dashed 1px #ccc;
+.title, .our-service h1{
+	margin-top: 20px;
+	font-family: Exo, sans-serif;
+    background: url("../img/aboutUs/background.png") repeat-x 0 100%;
+    padding-bottom: 24px;
+    color: #85c2bc;
+    padding-top: 35px;
+    margin-bottom: 20px;
 }
 .title h1{
 	font-family: 'Exo', sans-serif;
@@ -124,3 +121,98 @@ button.type-button {
   -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
   transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
 }
+
+/*==================================================================================================================
+OUR SERVICE
+====================================================================================================================*/
+
+.our-service {
+	padding-bottom: 100px;
+}
+.icon-service a{
+    text-align: center;
+	float: left;
+	width: 100%;
+	height: 65px;
+	border: 1px solid #909090;
+	border-radius: 100%;
+	margin-right: 7px; /*space between*/
+
+} 
+.icon-service a i{
+	font-size: 40px;
+    line-height: 65px;
+	color: #909090;
+}
+
+.our-service .title-service {
+	font-family: Chewy;
+	font-size: 30px;
+	color: #909090;
+}
+
+.service2 {
+	padding-top: 30px;
+}
+
+.icon-service a i:hover {
+    color: #85c2bc;
+}
+
+.icon-service a:hover {
+	border: 1px solid #85c2bc;
+	color: #85c2bc;
+}
+
+/*==================================================================================================================
+Hover image
+====================================================================================================================*/
+.figure::before {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	z-index: 2;
+	display: block;
+	content: '';
+	width: 0;
+	height: 0;
+	background: rgba(255,255,255,.2);
+	border-radius: 100%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+	opacity: 0;
+}
+
+
+.figure:hover::before {
+	-webkit-animation: circle .75s;
+	animation: circle .75s;
+}
+@-webkit-keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 150%;
+		height: 150%;
+		opacity: 0;
+	}
+}
+@keyframes circle {
+	0% {
+		opacity: 1;
+	}
+	40% {
+		opacity: 1;
+	}
+	100% {
+		width: 150%;
+		height: 150%;
+		opacity: 0;
+	}
+}
+
+
