--- a/SourceCode/DaughtersOfStorm/WebContent/css/order.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/order.css
@@ -15,7 +15,7 @@
 	margin-left: 0px;
 }
 .posiOfButton{
-	margin-left: 35%;	
+	margin-left: 30%;	
 	z-index: 1;
 }
 .list{
@@ -29,7 +29,8 @@
 .cus-Info{
 	font-style: italic;	
 	font-size: 16px;	
-	color: #ff33cc
+	color: #ff33cc;
+	padding-top: 30px;
 }
 .posOfDiv{
 	margin-left: -135px; 
@@ -61,17 +62,16 @@ input#inputdefault, select.form-control {
 	
 }
 #order-picture{
-	max-height: 300px;
+	max-height: 400px;
 	max-width: 300px;
-	margin-left: 50px;	
 	padding-top: 10px;
 	z-index: 1;
 	}
 
-.input-quantity{
-	width: 90px;	
-	
+.col-md-8.input-quantity {
+    width: 90px;
 }
+
 .province{
 	margin-left: -15px;	
 	width:175px
