--- a/SourceCode/DaughtersOfStorm/WebContent/css/stylelogin.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/stylelogin.css
@@ -3,25 +3,6 @@
   padding: 0;
 }
 
-/*body {
-  margin: 0;
-  padding: 0;
-  font-family: Sans-serif;
-  background: #2c3e50;
-}
-
-#wrap {
-  margin: 0 auto 30px;
-}
-
-/*#regbar {
-  height: 67px;
-  background: #34495e;
-
-#navthing {
-  margin-left: 1100px;
-}*/
-
 h2 {
   padding: 20px;
   color: #ecf0f1;
@@ -32,7 +13,7 @@ fieldset {
 }
 
 .login {
-      position: absolute;
+    position: absolute;
     width: 350px;
     display: none;
     z-index: 999;
@@ -76,7 +57,7 @@ fieldset {
   box-shadow: 0 0 1px 1px #1abc9c;
 }
 .formholder input[type="submit"] {
-  background: #1abc9c;
+  background: #5bc0de;;
   padding: 10px;
   font-size: 20px;
   display: block;
@@ -91,12 +72,12 @@ fieldset {
 
 
 .register {
-      position: absolute;
-    width: 350px;
-    z-index: 999;
+  position: absolute;
+  width: 350px;
+  z-index: 999;
   display: none;
   left: -8%;
-    top: 45px;
+  top: 45px;
 }
 
 .arrow-up2 {
@@ -135,7 +116,7 @@ fieldset {
   box-shadow: 0 0 1px 1px #1abc9c;
 }
 .formregister input[type="submit"] {
-  background: #1abc9c;
+  background: #5bc0de;
   padding: 10px;
   font-size: 20px;
   display: block;
@@ -160,7 +141,7 @@ fieldset {
 
 a {
   color: #0664C2;
-  text-decoration: none;
+  text-decoration: none !important;
 }
 a:hover {
   color: #1abc9c;
