--- a/SourceCode/DaughtersOfStorm/WebContent/css/footer.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/footer.css
@@ -4,14 +4,14 @@
 
 footer {
 	clear: both;
-	background-color: #EAEAEA;
+	background-color: #EFECDD;
 	color: #888888 !important;
 	padding-top: 10px;
 	padding-bottom: 2px;
 	font-size: 18px;
 	padding-left: 8%;
 	padding-right: 8%;
-	position: fixed;
+	position: relative;
 	bottom: 0;
 	width: 100%;
 }
@@ -22,7 +22,7 @@ footer .row {
 }
 
 footer a {
-	color: #888888;
+	color: #85c2bc;
 }
 
 footer .row {
