--- a/SourceCode/DaughtersOfStorm/WebContent/css/order.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/order.css
@@ -1,10 +1,11 @@
-.container {
-    width: 1170px;
-    padding-bottom: 100px;
+.content {
+    padding-left: 15% !important;
+    padding-right: 8% !important;
+    padding-bottom: 90px;
 }
 
 .info{
-	font-size: 20px;	
+	font-size: 20px;	 
 	font-weight: normal;	
 	margin-top: 10px;
 }
@@ -15,7 +16,7 @@
 	margin-left: 0px;
 }
 .posiOfButton{
-	margin-left: 30%;	
+	margin-left: 12%;	
 	z-index: 1;
 }
 .list{
@@ -29,7 +30,7 @@
 .cus-Info{
 	font-style: italic;	
 	font-size: 16px;	
-	color: #ff33cc;
+	color: #5bc0de;
 	padding-top: 30px;
 }
 .posOfDiv{
