--- a/SourceCode/DaughtersOfStorm/WebContent/css/styleContact.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/styleContact.css
@@ -28,20 +28,20 @@ html {
 body {
 	background: #728eaa;
 	background: -moz-linear-gradient(top, #CCC 0%, #728EAA 150%); /* firefox */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#25303C), color-stop(100%,#728EAA)); /* webkit */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,z), color-stop(100%,#728EAA)); /* webkit */
 	font-family: sans-serif;
 }
 .cover{
 	background:#CCC; width:700px; margin:auto; padding-left:60px;
 }
-h2.contact { padding-left: 125px; font-size: 66px; color: #ff5400; height: 105px; background: url(images/contact.png) no-repeat -10px -10px;  font-family: 'YanoneKaffeesatzRegular';}
-p.contact { font-size: 24px; margin-bottom: 15px; line-height: 36px; font-family: 'BebasNeueRegular', Arial; color: #4b4b4b; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); }
-#contact { margin-bottom: 0px; }
+h2.contact { padding-left: 150px; font-size: 66px; color: #000000; height: 95px; font-family: 'YanoneKaffeesatzRegular';margin-bottom:-20px;}
+p.contact { font-size: 24px; margin-bottom: 10px; line-height: 36px; font-family: 'BebasNeueRegular', Arial; color: #4b4b4b; text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2); }
+#contact { margin-bottom: -100px; }
 input[type="text"] { width: 400px; }
-textarea { width: 500px; height: 200px; }
+textarea { width: 400px; height: 50px; }
 label { color: black; }
-input, textarea { background-color: rgba(255, 255, 255, 0.4); border: 5px solid rgba(122, 192, 0, 0.15); padding: 10px; font-family: Keffeesatz, Arial; color: #4b4b4b; font-size: 24px; -webkit-border-radius: 5px; margin-bottom: 15px; margin-top: -10px; }
-input:focus, textarea:focus { border: 5px solid #ff5400; background-color: rgba(255, 255, 255, 1); }
+input, textarea { background-color: rgba(255, 255, 255, 0.4); border: 5px ; padding: 10px; font-family: Keffeesatz, Arial; color: #4b4b4b; font-size: 20px; -webkit-border-radius: 5px; margin-bottom: 15px; margin-top: -10px; }
+input:focus, textarea:focus {background-color: rgba(255, 255, 255, 1); }
 
 input[type="submit"] { border: none; cursor: pointer; color: blanchedalmond; font-size: 24px; background-color: #7ac000; padding: 5px 36px 8px 36px; -webkit-border-radius: 10px; -moz-border-radius: 10px; -webkit-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.4); -moz-box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6); border-bottom: 1px solid rgba(0, 0, 0, 0.4); border-top: 1px solid rgba(255, 255, 255, 0.6);
 	background: -webkit-gradient(
@@ -61,3 +61,6 @@ input[type="submit"] { border: none; cursor: pointer; color: blanchedalmond; fon
 
 }
 input[type="submit"]:active { top: 1px; }
+p.word{
+	margin-top:-5px !important;
+}
