change css order

--- a/SourceCode/DaughtersOfStorm/WebContent/css/order.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/order.css
@@ -2,6 +2,7 @@
     padding-left: 15% !important;
     padding-right: 8% !important;
     padding-bottom: 90px;
+    padding-top: 30px;
 }
 
 .info{
