--- a/SourceCode/DaughtersOfStorm/WebContent/css/mybag.css
+++ b/SourceCode/DaughtersOfStorm/WebContent/css/mybag.css
@@ -21,11 +21,9 @@
 .btn:hover {
 	color: white;
 }
-a.btn:hover {
-    color: #fff;
-}
+
 .border img {
-	width: 150px;
+	width: 220px;
 	height: auto;
 	padding-bottom: 20px;
 	padding-left: -10px;
@@ -38,6 +36,7 @@ a.btn:hover {
 .border {
 	background-color: #EEF6F8;
 	padding: 10px;
+	width: 262
 }
 .profile {
 	padding-left: 30px;
@@ -67,9 +66,8 @@ a.btn:hover {
 	text-align: center;
 }
 .fa-trash-o {
-	font-size: 20px;
+	font-size: 25px;
 	color: #23527c;
-
 }
 
 p.price, p.state {
